--- a/daemonset/daemonset.yaml
+++ b/daemonset/daemonset.yaml
@@ -1,5 +1,5 @@
 # Kubernetes Daemonset example
-# Deployment manages to run pod replicas on every node like a node daemon.
+# Daemonset manages to run pod replicas on every node like a node daemon.
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
